# Medical_Search_Pro_Agent

./: .env.example  README.md  main.py  pyproject.toml
agent_module/: .env  __init__.py  agent.py
agent_module/sub_agents/: email_dispatcher_agent.py  query_ingestor_agent.py
agent_module/tools/: pubmed_tool.py  send_emails_tool.py
deployment/: local.py  remote.py
medical_agent_bot/: agent.py
medical_agent_bot/sub_agents/: email_dispatcher_agent.py  evidence_builder_agent.py
medical_agent_bot/tools/: collect_user_email.py
